# rootstar-bci

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  HARDWARE.md  README.md  docker-compose.yml  nginx.conf  vr-neural-mapping-claude-code-prompt.md
crates/rootstar-bci-app/: Cargo.toml
crates/rootstar-bci-app/src/: main.rs
crates/rootstar-bci-core/: Cargo.toml
crates/rootstar-bci-core/src/: error.rs  lib.rs  math.rs  protocol.rs  types.rs
crates/rootstar-bci-core/src/fingerprint/: config.rs  mod.rs  safety.rs  types.rs
crates/rootstar-bci-core/src/sns/: auditory.rs  encoding.rs  error.rs  gustatory.rs  mod.rs  olfactory.rs  spiking.rs  tactile.rs  types.rs  visual.rs
crates/rootstar-bci-embedded/: Cargo.toml
crates/rootstar-bci-embedded/src/: ble.rs  lib.rs
crates/rootstar-bci-embedded/src/drivers/: ads1299.rs  ads1299_array.rs  eda.rs  emg.rs  fnirs.rs  fnirs_array.rs  mod.rs  stim.rs  stim_matrix.rs
crates/rootstar-bci-native/: Cargo.toml
crates/rootstar-bci-native/benches/: processing_benchmarks.rs
crates/rootstar-bci-native/src/: lib.rs
crates/rootstar-bci-native/src/bridge/: ble.rs  device_context.rs  device_manager.rs  mod.rs  usb.rs
crates/rootstar-bci-native/src/bridge/streaming/: brainflow.rs  lsl.rs  mod.rs  osc.rs
crates/rootstar-bci-native/src/fingerprint/: database.rs  extractor.rs  fusion.rs  mod.rs  stimulation.rs
crates/rootstar-bci-native/src/ml/: features.rs  mod.rs
crates/rootstar-bci-native/src/processing/: fft.rs  filters.rs  fnirs.rs  fusion.rs  hyperscanning.rs  mod.rs
crates/rootstar-bci-native/src/sns/: calibration.rs  cortical_map.rs  decoder.rs  encoder.rs  error.rs  features.rs  hrf.rs  mod.rs  simulation.rs
crates/rootstar-bci-native/src/viz/: app.rs  dashboard.rs  electrode_status.rs  fnirs_status.rs  mesh.rs  mod.rs  renderer.rs
crates/rootstar-bci-web/: Cargo.toml  vercel.json
crates/rootstar-bci-web/src/: control.rs  dashboard.rs  demo.rs  lib.rs
crates/rootstar-bci-web/src/sns_viz/: heatmap.rs  interaction.rs  mod.rs  pipeline.rs  renderer.rs  wasm.rs
crates/rootstar-bci-web/src/sns_viz/meshes/: cochlea.rs  mod.rs  olfactory.rs  retina.rs  skin.rs  tongue.rs
crates/rootstar-bci-web/src/sns_viz/shaders/: mesh.wgsl
crates/rootstar-bci-web/src/viz/: eda.rs  emg.rs  fnirs_map.rs  mod.rs  timeseries.rs  topomap.rs  vr_preview.rs
crates/rootstar-bci-web/www/: app.js  index.html
crates/rootstar-bci-web/www/fixtures/: relaxed-demo.json
crates/rootstar-bci-web/www/pkg/: rootstar_bci_web.js  rootstar_bci_web_bg.wasm
crates/rootstar-physics-bridge/: Cargo.toml
crates/rootstar-physics-bridge/src/: engine.rs  intensity.rs  lib.rs  limiter.rs  translator.rs
crates/rootstar-physics-core/: Cargo.toml
crates/rootstar-physics-core/src/: collision.rs  effects.rs  lib.rs  types.rs  wind.rs
crates/rootstar-physics-mesh/: Cargo.toml
crates/rootstar-physics-mesh/src/: lib.rs  region.rs  vertex.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  HARDWARE_COMPARISON.md  IMPLEMENTATION_PROMPT.md  NEURAL_FINGERPRINT_SYSTEM.md  VR_PHYSICS.md
docs/diagrams/: 01-system-architecture.mmd  02-data-flow.mmd  03-hardware-interface.mmd  04-sns-architecture.mmd  05-processing-pipeline.mmd
python/: requirements.txt  setup.py
python/neural_fingerprint/: __init__.py  collection.py  controller.py  database.py  models.py  vr_bridge.py
scripts/: build-wasm.sh
