[package]
name = "rootstar-bci-app"
description = "Rootstar BCI Application - Native visualization and WebSocket server for brain-computer interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["bci", "eeg", "fnirs", "visualization", "neuroscience"]
categories = ["science", "visualization"]

[[bin]]
name = "rootstar"
path = "src/main.rs"

[features]
default = ["native"]
native = ["rootstar-bci-native/viz"]
server = ["dep:axum", "dep:tower-http", "dep:tokio-tungstenite"]
usb = ["rootstar-bci-native/usb"]
ble = ["rootstar-bci-native/ble"]

[dependencies]
# Core BCI libraries
rootstar-bci-core = { workspace = true, features = ["std"] }
rootstar-bci-native = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# WebSocket server (optional, for server mode)
axum = { version = "0.7", optional = true, features = ["ws"] }
tower-http = { version = "0.5", optional = true, features = ["fs", "cors"] }
tokio-tungstenite = { version = "0.21", optional = true }

# Serialization for WebSocket messages
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
