[package]
name = "rootstar-bci-native"
description = "Host signal processing, ML inference, and data fusion for Rootstar BCI Platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["bci", "eeg", "fnirs", "signal-processing", "neuroscience"]
categories = ["science", "mathematics"]

[features]
default = []
usb = ["dep:serialport"]
ble = ["dep:btleplug"]
database = ["dep:rusqlite", "dep:uuid"]
viz = ["dep:winit", "dep:wgpu", "dep:pollster", "dep:egui", "dep:egui-wgpu", "dep:egui-winit", "dep:bytemuck", "dep:image"]
osc = ["dep:rosc"]
streaming = ["osc"]

[dependencies]
# Core types (with std feature)
rootstar-bci-core = { workspace = true, features = ["std"] }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true }

# Serial communication (optional, requires libudev on Linux)
serialport = { workspace = true, optional = true }

# Bluetooth Low Energy (optional)
btleplug = { workspace = true, optional = true }

# Database for shared fingerprint storage (optional)
rusqlite = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# DSP / FFT
rustfft = { workspace = true }

# Streaming protocols (optional)
rosc = { workspace = true, optional = true }

# Collections
heapless = { workspace = true }

# Visualization (optional, native GPU rendering)
winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true, features = ["wgsl"] }
pollster = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui-wgpu = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[dev-dependencies]
# Testing
proptest = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "processing_benchmarks"
harness = false

[lints]
workspace = true
