[package]
name = "rootstar-physics-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core physics types and simulation for VR neural mapping"
keywords = ["physics", "vr", "simulation", "bci"]
categories = ["simulation", "game-development"]

[features]
default = ["std"]
std = []
# no_std support for embedded VR headsets
no_std = []

[dependencies]
# Math (no_std compatible)
nalgebra = { workspace = true }
libm = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true, optional = true }

# no_std collections
heapless = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
